--- a/TripPurposePicker.xib
+++ b/TripPurposePicker.xib
@@ -54,8 +54,9 @@
                 </label>
             </subviews>
             <color key="backgroundColor" red="0.15686275059999999" green="0.1647058874" blue="0.2196078598" alpha="1" colorSpace="deviceRGB"/>
-            <simulatedStatusBarMetrics key="simulatedStatusBarMetrics" statusBarStyle="blackOpaque"/>
+            <simulatedStatusBarMetrics key="simulatedStatusBarMetrics" statusBarStyle="lightContent"/>
             <freeformSimulatedSizeMetrics key="simulatedDestinationMetrics"/>
+            <point key="canvasLocation" x="480" y="334"/>
         </view>
     </objects>
     <resources>
